create a mindset section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </div>
         </section>
     </header>
-    <!-- header section close -->
+    <!-- header section end -->
     <!-- main section start -->
     <main>
-        <!-- my failures section  -->
+        <!-- my failures section start  -->
         <section class="my-failures">
             <div class="my-failures-container container">
                 <div class="my-failures-image">
@@ -61,7 +61,49 @@
                 </div>
             </div>
         </section>
+        <!-- my failures section end  -->
+
+        <!-- my plans section start -->
+        <section class="my-plans">
+            <h4>My Plans</h4>
+            <div class="my-plan-container container">
+                <div class="my-plan-card">
+                    <img src="./images/icons/js.png" alt="">
+                    <h5>Web Development</h5>
+                    <p>I want to start</p>
+                </div>
+                <div class="my-plan-card">
+                    <img src="./images/icons/js.png" alt="">
+                    <h5>Web Development</h5>
+                    <p>I want to start</p>
+                </div>
+                <div class="my-plan-card">
+                    <img src="./images/icons/js.png" alt="">
+                    <h5>Web Development</h5>
+                    <p>I want to start</p>
+                </div>
+
+                <div class="my-plan-card">
+                    <img src="./images/icons/js.png" alt="">
+                    <h5>Web Development</h5>
+                    <p>I want to start</p>
+                </div>
+            </div>
+        </section>
+        <!-- my plans section end -->
+
+        <!-- mmindset section start -->
+        <section class="mindset">
+            <div class="mindset-container container">
+                <div>
+                    <h4>Awlays keep a positive mindset</h4>
+                    <a href="#" class="btn">Call Now</a>
+                </div>
+            </div>
+        </section>
+        <!-- mindset section end -->
     </main>
+    <!-- main section end -->
 </body>
 
 </html>
