create a footer section

--- a/index.html
+++ b/index.html
@@ -97,13 +97,39 @@
             <div class="mindset-container container">
                 <div>
                     <h4>Awlays keep a positive mindset</h4>
-                    <a href="#" class="btn">Call Now</a>
+                    <a href="#" class="btn button">Call Now</a>
                 </div>
             </div>
         </section>
         <!-- mindset section end -->
     </main>
     <!-- main section end -->
+    <!-- footer section start  -->
+    <footer>
+        <div class="footer-container container">
+
+            <div class="content">
+                <div class="future">
+                    <h4>Future</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words</p>
+                    <a href="#">Email : info@gmail.com</a>
+                    <a href="#">Phone : 01500 00 00 00</a>
+                    <div class="social">
+                        <a href="#"><img src="./images/icons/fb.png" alt=""></a>
+                        <a href="#"><img src="./images/icons/twitter.png" alt=""></a>
+                        <a href="#"><img src="./images/icons/youtube.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <form class="subscribe">
+                <p>Subscribe</p>
+                <input type="email" name="" id="" placeholder="Enter your email">
+                <input type="button" value="Subscribe" class="button">
+            </form>
+        </div>
+    </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
